--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
